...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Legend button at the top left -->
    <Button
        android:id="@+id/btnLegend"
...
                android:layout_gravity="center_vertical"
                android:text="Floor: "
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/floorSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
...
